aggiunta classe per le funzioni di supporto